--- a/init.yml
+++ b/init.yml
@@ -66,7 +66,10 @@
     
   # NOTE: Place code for installing RStudio here (if needed)
   # NOTE: Place code for Raspberry Pi cluster-related stuff here
-  # TODO: Pip installs are next
+  
+  # TODO: Fit these in the ZSH section later
+  #echo 'source /etc/profile.d/modules.sh' >> "$HOME"/.zshrc
+  #echo 'module load mpi/openmpi-x86_64' >> "$HOME"/.zshrc
 
 # Play for user program configuations
 - name: Installing and configuring user programs
