--- a/init.yml
+++ b/init.yml
@@ -70,6 +70,8 @@
   # TODO: Fit these in the ZSH section later
   #echo 'source /etc/profile.d/modules.sh' >> "$HOME"/.zshrc
   #echo 'module load mpi/openmpi-x86_64' >> "$HOME"/.zshrc
+  
+  # TODO: Vivi installation is next
 
 # Play for user program configuations
 - name: Installing and configuring user programs
@@ -114,6 +116,7 @@
 - ansible.builtin.import_playbook: OCaml_for_Debian.yml
 - ansible.builtin.import_playbook: Io.yml
 - ansible.builtin.import_playbook: vim_config.yml
+- ansible.builtin.import_playbook: vivi.yml
       
 # Play for debugging stuff
 - name: Debugging stuff
