--- a/local.yml
+++ b/local.yml
@@ -2,8 +2,15 @@
 - name: Setting up local app environment
   hosts: localhost
   connection: local
-  vars_files:
-    - local_dirs.yml
+  vars:
+    - LOCAL: "{{ lookup('ansible.builtin.env', 'HOME') }}/.local"
+    - local_dirs:
+      - bin
+      - include
+      - src
+    - local_share_dirs:
+      - share/gnote
+      - share/vinagre
   
   tasks:
   - name: Copying directories into {{ LOCAL }}
