--- a/add_rpmfusion-free_repo.yml
+++ b/add_rpmfusion-free_repo.yml
@@ -1,5 +1,6 @@
 ---
 - name: Adding rpmfusion-free repository
+  check_mode: '{{ debug_mode }}'
   become: yes
   ansible.builtin.command:
     cmd: rpm -Uvh http://download1.rpmfusion.org/free/fedora/rmpfusion-free-release-stable.noarch.rpm
