--- a/OCaml_for_Debian.yml
+++ b/OCaml_for_Debian.yml
@@ -10,16 +10,17 @@
   hosts: localhost
   connection: local
   vars_files:
+    - debug_mode.yml
     - pkgs_to_install.yml
 
   tasks:
   - name: Initializing OPAM
-    check_mode: on
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.command:
       cmd: opam init
   
   - name: Installing opam packages
-    check_mode: on
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.command:
       cmd: opam install {{ item }}
     loop: '{{ pkgs_to_install_from_opam + pkgs_to_install_from_opam_for_debian }}'
