--- a/OCaml_for_RPM_distros.yml
+++ b/OCaml_for_RPM_distros.yml
@@ -10,31 +10,32 @@
   hosts: localhost
   connection: local
   vars_files:
+    - debug_mode.yml
     - pkgs_to_install.yml
     
   - name: Initializing OPAM
-    check_mode: on
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.command:
       cmd: opam init
     
   - name: Starting OPAM environment
-    check_mode: on
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.shell:
       cmd: eval $(opam env --switch=default)
   
   - name: Installing OPAM packages
-    check_mode: on
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.command:
       cmd: opam install {{ item }}
     loop: '{{ pkgs_to_install_from_opam + pkgs_to_install_from_opam_for_redhat_distros }}'
   
   - name: Running OPAM user setup
-    check_mode: on
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.command:
       cmd: opam user-setup install
     
   - name: Finalizing OPAM environment
-    check_mode: on
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.shell:
       cmd: eval $(opam env)
   
