--- a/git_config.yml
+++ b/git_config.yml
@@ -3,16 +3,19 @@
   hosts: localhost
   connection: local
   vars_files:
+    - debug_mode.yml
     - git_config_options.yml
   
   tasks:
   - name: 'GIT CONFIG: Installing Git'
+    check_mode: '{{ debug_mode }}'
     become: yes
     ansible.builtin.apt:
       name: git
       state: latest
 
   - name: 'GIT CONFIG: Configuring global Git settings'
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.command:
       cmd: git config --global {{ item.key }} "{{ item.value }}"
     loop: "{{ git_config_options | dict2items }}"
