--- a/init.yml
+++ b/init.yml
@@ -6,17 +6,19 @@
   connection: local
   become: yes
   vars_files:
+    - debug_mode.yml
     - pkgs_to_remove.yml
     - pkgs_to_install.yml
 
   tasks:
   - name: Remove unwanted KDE packages
-    check_mode: on
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.apt:
       name: "{{ pkgs_to_remove + pkgs_to_remove_from_debian }}"
       state: absent
       
   - name: Remove these packages manually
+    check_mode: '{{ debug_mode }}'
     block:
       - name: Attempting to remove packages
         ansible.builtin.shell:
@@ -34,32 +36,37 @@
           msg: The files could not be found and have likely already been deleted'
       
   - name: Upgrade current packages on machine
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.apt:
       update_cache: yes
       upgrade: safe
       
   - name: Install net-tools
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.apt:
       name: net-tools
       state: latest
       
   - name: Make edits to /etc/sudoers
+    check_mode: '{{ debug_mode }}'
     become_user: "{{ lookup('ansible.builtin.env', 'USER') }}"
     ansible.builtin.command:
       cmd: konsole -e 'bash visudo_edits.sh apt dpkg'
       
   - name: Removing GRUB menu timeout
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.replace:
       path: /etc/default/grub
       regexp: 'GRUB_TIMEOUT=5'
       replace: 'GRUB_TIMEOUT=-1'
       
   - name: Updating GRUB
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.command:
       cmd: update-grub
       
   - name: Installing packages
-    check_mode: on
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.apt:
       name: "{{ pkgs_to_install }}"
       state: present
@@ -78,33 +85,37 @@
   hosts: localhost
   connection: local
   vars_files:
+    - debug_mode.yml
     - pkgs_to_install.yml
     - aliases.yml
 
   tasks:
   - name: Writing aliases to "{{ aliases_file }}"
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.shell:
       cmd: echo "alias {{item.key}}='{{ item.value }}'" >> "{{ aliases_file }}"
     loop: "{{ aliases | dict2items }}"
       
   - name: Reassign Okular shortcut for full screen mode from Ctrl+Shift+F to F11
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.replace:
       path: ~/.local/share/kxmlgui5/okular/shell.rc
       regexp: '</gui>' # NOTE: This might need to be </kpartgui>
       replace: '  <Action shortcut="F11" name="fullscreen"/>\n </ActionProperties>\n</gui>'
     
   - name: Installing JFLAP
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.get_url:
       url: https://www.jflap.org/jflaptmp/july27-18/JFLAP7.1.jar
       dest: "{{ lookup('ansible.builtin.env', 'HOME') }}/.local/bin"
       
   - name: Configuring VMM (Virtual Machine Manager)
-    check_mode: on
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.command:
       cmd: konsole -e 'bash install_VMM.sh "debian bullseye" apt'
       
   - name: Installing pip packages
-    check_mode: on
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.pip:
       name: '{{ pkgs_to_install_from_pip }}'
       
@@ -117,38 +128,3 @@
 - ansible.builtin.import_playbook: Io.yml
 - ansible.builtin.import_playbook: vim_config.yml
 - ansible.builtin.import_playbook: vivi.yml
-      
-# Play for debugging stuff
-- name: Debugging stuff
-  hosts: localhost
-  connection: local
-  vars_files:
-    - aliases.yml
-    - nano_config_options.yml
-    - git_config_options.yml
-    - vim_config_options.yml
-  
-  tasks:
-  - name: 'DEBUGGING: Removing {{ aliases_file }}'
-    check_mode: off
-    ansible.builtin.file:
-      name: '{{ aliases_file }}'
-      state: absent
-      
-  - name: 'DEBUGGING: Removing {{ NANORC }}'
-    check_mode: off
-    ansible.builtin.file:
-      name: '{{ NANORC }}'
-      state: absent
-      
-  - name: 'DEBUGGING: Resetting Git global options'
-    check_mode: on
-    ansible.builtin.command:
-      cmd: git config --global --unset {{ item.key }}
-    loop: "{{ git_config_options | dict2items }}"
-    
-  - name: 'DEBUGGING: Removing {{ VIMRC }}'
-    check_mode: off
-    ansible.builtin.file:
-      name: '{{ VIMRC }}'
-      state: absent
