--- a/local.yml
+++ b/local.yml
@@ -11,15 +11,19 @@
     - local_share_dirs:
       - share/gnote
       - share/vinagre
+  vars_files:
+    - debug_mode.yml
   
   tasks:
   - name: Copying directories into {{ LOCAL }}
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.copy:
       src: '{{ item }}'
       dest: '{{ LOCAL }}'
     loop: '{{ local_dirs }}'
   
   - name: Copying directories into {{ LOCAL }}/share
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.copy:
       src: '{{ item }}'
       dest: '{{ LOCAL }}/share'
