--- a/ssh_config.yml
+++ b/ssh_config.yml
@@ -12,10 +12,12 @@
       - "rpi4"
       - "debian-vm"
       - "debian_chroot"
+  vars_files:
+    - debug_mode.yml
   
   tasks:
   - name: Generating SSH keys
-    check_mode: on
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.command:
       cmd: ssh-keygen -b 4096 -t ed25519 -f {{ ssh }}/{{ item }}
     loop: '{{ key_names }}'
@@ -23,6 +25,7 @@
   - name: Copying SSH config file to {{ ssh }}
     block:
       - name: Attempting to copy SSH config file to {{ ssh }}
+        check_mode: '{{ debug_mode }}'
         ansible.builtin.copy:
           src: ssh_config.txt
           dest: '{{ ssh_config }}'
@@ -32,6 +35,6 @@
           msg: SSH config file not found and could not be copied. You'll have to create it manually.
     
   - name: Copying SSH key to {{ key_names[2] }}
-    check_mode: on
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.command:
       cmd: ssh-copy-id -i {{ ssh }}/{{ key_names[2] }} cswindell@{{ key_names[2] }}
