--- a/vivi.yml
+++ b/vivi.yml
@@ -5,20 +5,30 @@
   vars:
     - pkg: vivi.deb
     - vivi_deb_path: "{{ lookup('ansible.builtin.env', 'HOME') }}/Downloads/{{ pkg }}"
+  vars_files:
+    - debug_mode.yml  
   
   tasks:
-  - name: Downloading Vivi
+  - name: 'VIVI: Downloading Vivi'
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.get_url:
       url: https://api.vivi.io/deb
       dest: "{{ vivi_deb_path }}"
       
-  - name: Installing Vivi
-    check_mode: on
+  - name: 'VIVI: Installing Vivi'
+    check_mode: '{{ debug_mode }}'
     become: yes
-    ansible.builtin.apt:
-      deb: "{{ vivi_deb_path }}"
+    block:
+      - name: 'VIVI: Attempting to install Vivi'
+        ansible.builtin.apt:
+          deb: "{{ vivi_deb_path }}"
+    rescue:
+      - name: 'VIVI: Vivi installation failed'
+        ansible.builtin.debug:
+          msg: This likely failed because you are in debug mode.
       
-  - name: Removing Vivi deb archive
+  - name: 'VIVI: Removing Vivi deb archive'
+    check_mode: '{{ debug_mode }}'
     ansible.builtin.file:
       path: "{{ vivi_deb_path }}"
       state: absent
