--- a/aliases.yml
+++ b/aliases.yml
@@ -17,7 +17,8 @@ aliases: {
           'ocaml-top': 'ocaml-top &',
           'chroot-startup': '$SHELL ~/Documents/projects/chroot_jail/chroot_startup.sh',
           'mpiclang': 'OMPI_CC=clang mpicc',
-          'mpiclang++': 'OMPI_CC=clang++ mpic++'
+          'mpiclang++': 'OMPI_CC=clang++ mpic++',
+          'update-vivi': "ansible-playbook {{ lookup('ansible.builtin.env', 'HOME') }}/Documents/linux_files/linux-setup/vivi.yml --extra-vars \"{\"debug_mode\":\"off\"}"
          }
          
 aliases_redhat_distros: {
