Added Flatpak program installs

--- a/init.yml
+++ b/init.yml
@@ -81,6 +81,21 @@
   #echo 'module load mpi/openmpi-x86_64' >> "$HOME"/.zshrc
   #echo 'eval $(thefuck --alias)' >> "$HOME"/.bashrc
   
+  # echo -e '\nNOTE: Check this script for notes on how to install the Waveforms SDK\n\n'
+  # Download and install the Adept runtime environment, then Waveforms
+  # https://mautic.digilentinc.com/adept-runtime-download     <- Adept runtime environment
+  # https://digilent.com/shop/software/digilent-waveforms/download    <- Waveforms SDK
+  # Tutorials:
+  #   - https://digilent.com/reference/software/waveforms/waveforms-3/getting-started-guide
+  #   - https://digilent.com/reference/test-and-measurement/guides/waveforms-using-waveforms-sdk
+  #firefox https://mautic.digilentinc.com/adept-runtime-download
+  #firefox https://digilent.com/shop/software/digilent-waveforms/download
+  
+  # TODO: Download and install MATLAB (currently getting a "file too short" error for libicudata.so.69)
+  #firefox https://www.mathworks.com/downloads/
+  #echo "alias update-matlab='sudo /usr/local/MATLAB/R2021a/bin/glnxa64/update_installer'" >> .bash_aliases
+
+  
 # Play for user program configuations
 - name: Installing and configuring user programs
   hosts: localhost
@@ -132,3 +147,4 @@
 - ansible.builtin.import_playbook: vmware_horizon.yml
 - ansible.builtin.import_playbook: bash.yml
 - ansible.builtin.import_playbook: zsh.yml
+- ansible.builtin.import_playbook: flatpak.yml
