--- a/pkgs_to_install.yml
+++ b/pkgs_to_install.yml
@@ -8,6 +8,7 @@ pkgs_to_install:
   - debootstrap
   - dmg2img
   - doxygen
+  - flatpak
   - gimp
   - gnote
   - gprolog
@@ -25,6 +26,7 @@ pkgs_to_install:
   - plank
   - plasma-browser-integration
   - python3-pip
+  - qgis
   - simplescreenrecorder
   - racket
   - racket-doc
@@ -132,3 +134,13 @@ pkgs_to_install_from_opam_for_debian:
   
 pkgs_to_install_from_opam_for_redhat_distros:
   - user-setup
+  
+pkgs_to_install_flatpak:
+  - com.discordapp.Discord
+  - org.onlyoffice
+  #- org.qgis.qgis
+  - org.raspberrypi.rpi-imager
+  #- com.slack.Slack
+  #- com.st.STM32CubeIDE
+  - com.microsoft.Teams
+  #- us.zoom.Zoom
