Fixed task name output to match other imported playbooks

--- a/bash.yml
+++ b/bash.yml
@@ -6,7 +6,7 @@
     - debug_mode.yml
   
   tasks: 
-  - name: Copying user Bash config files
+  - name: 'BASH: Copying user Bash config files'
     check_mode: '{{ debug_mode }}'
     ansible.builtin.copy:
       src: bashrc/{{ lookup('ansible.builtin.env', 'USER') }}.bashrc
@@ -14,7 +14,7 @@
       owner: "{{ lookup('ansible.builtin.env', 'USER') }}"
       group: "{{ lookup('ansible.builtin.env', 'USER') }}"
       
-  - name: Copying root Bash config files
+  - name: 'BASH: Copying root Bash config files'
     check_mode: '{{ debug_mode }}'
     become: yes
     ansible.builtin.copy:
