Added installation of Arduino and Teensyduino

--- a/init.yml
+++ b/init.yml
@@ -148,3 +148,4 @@
 - ansible.builtin.import_playbook: bash.yml
 - ansible.builtin.import_playbook: zsh.yml
 - ansible.builtin.import_playbook: flatpak.yml
+- ansible.builtin.import_playbook: Teensyduino.yml
