--- a/init.yml
+++ b/init.yml
@@ -149,3 +149,4 @@
 - ansible.builtin.import_playbook: zsh.yml
 - ansible.builtin.import_playbook: flatpak.yml
 - ansible.builtin.import_playbook: Teensyduino.yml
+#- ansible.builtin.import_playbook: wine.yml
