--- a/init.yml
+++ b/init.yml
@@ -160,3 +160,16 @@
 #- ansible.builtin.import_playbook: Teensyduino.yml
 #- ansible.builtin.import_playbook: wine.yml
 - ansible.builtin.import_playbook: VMM.yml
+
+- name: Cleanup
+  hosts: localhost
+  connection: local
+  become: yes
+  vars_files:
+    - debug_mode.yml
+    
+  tasks:
+  - name: Autoremoving packages
+    check_mode: '{{ debug_mode }}'
+    ansible.builtin.apt:
+      autoremove: true
