--- a/zsh.yml
+++ b/zsh.yml
@@ -35,6 +35,7 @@
       
   - name: 'ZSH: Changing default shell to Z shell'
     check_mode: '{{ debug_mode }}'
+    become: yes
     ansible.builtin.user:
       name: "{{ lookup('ansible.builtin.env', 'USER') }}"
       shell: /usr/bin/zsh
