--- a/aliases.yml
+++ b/aliases.yml
@@ -18,7 +18,7 @@ aliases: {
           'chroot-startup': '$SHELL ~/Documents/projects/chroot_jail/chroot_startup.sh',
           'mpiclang': 'OMPI_CC=clang mpicc',
           'mpiclang++': 'OMPI_CC=clang++ mpic++',
-          'update-vivi': "ansible-playbook {{ lookup('ansible.builtin.env', 'HOME') }}/Documents/linux_files/linux-setup/vivi.yml --extra-vars \"{\"debug_mode\":\"off\"}" #,
+          'update-vivi': "ansible-playbook {{ lookup('ansible.builtin.env', 'HOME') }}/Documents/linux_files/linux-setup/vivi.yml --extra-vars \"{\"debug_mode\":\"off\"}\"" ,
           #'wine32': "WINEPREFIX={{ lookup('ansible.builtin.env', 'HOME') }}/.wine32 wine"
           #'clear': "printf '\33c\e[3J'"    # Only necessary for Rocky Linux 8.6 (unsure about 9)
          }
