Added install of okular-extra-backends

--- a/pkgs_to_install.yml
+++ b/pkgs_to_install.yml
@@ -24,6 +24,7 @@ pkgs_to_install:
   - make
   - nasm
   - neofetch
+  - okular-extra-backends
   - plasma-browser-integration
   - python3-pip
   - qgis
