--- a/pop_os/pop_os.yml
+++ b/pop_os/pop_os.yml
@@ -70,8 +70,8 @@
 - ansible.builtin.import_playbook: ../vim_config.yml
 #- ansible.builtin.import_playbook: ../vivi.yml
 #- ansible.builtin.import_playbook: ../vmware_horizon.yml
-- ansible.builtin.import_playbook: bash.yml
-- ansible.builtin.import_playbook: zsh.yml
+#- ansible.builtin.import_playbook: ../bash.yml
+#- ansible.builtin.import_playbook: ../zsh.yml
 - ansible.builtin.import_playbook: flatpak.yml
 #- ansible.builtin.import_playbook: Teensyduino.yml
 #- ansible.builtin.import_playbook: wine.yml
