--- a/pop_os/pop_os.yml
+++ b/pop_os/pop_os.yml
@@ -64,8 +64,8 @@
     loop: "{{ aliases | dict2items }}"
       
 - ansible.builtin.import_playbook: ../nano_config.yml
-- ansible.builtin.import_playbook: ssh_config.yml
-- ansible.builtin.import_playbook: git_config.yml
+- ansible.builtin.import_playbook: ../ssh_config.yml
+- ansible.builtin.import_playbook: ../git_config.yml
 #- ansible.builtin.import_playbook: local.yml
 - ansible.builtin.import_playbook: ../vim_config.yml
 #- ansible.builtin.import_playbook: ../vivi.yml
