--- a/pkgs_to_install.yml
+++ b/pkgs_to_install.yml
@@ -147,7 +147,7 @@ pkgs_to_install_from_opam_for_redhat_distros:
   
 pkgs_to_install_flatpak:
   - com.discordapp.Discord
-  - org.onlyoffice
+  - org.onlyoffice.desktopeditors
   #- org.qgis.qgis
   - org.raspberrypi.rpi-imager
   #- com.slack.Slack
