--- a/flatpak.yml
+++ b/flatpak.yml
@@ -4,7 +4,7 @@
   connection: local
   vars_files:
     - debug_mode.yml
-    - pkgs_to_install.yml
+    - pop_os/pkgs_to_install.yml
   
   tasks:
     - name: 'FLATPAK: Attempting to install Flatpak programs'
