--- a/pop_os/pop_os.yml
+++ b/pop_os/pop_os.yml
@@ -76,6 +76,7 @@
 #- ansible.builtin.import_playbook: ../Teensyduino.yml
 #- ansible.builtin.import_playbook: ../wine.yml
 #- ansible.builtin.import_playbook: ../VMM.yml
+- ansible.builtin.import_playbook: gnome_extensions.yml
 
 - name: Cleanup
   hosts: localhost
