--- a/pop_os/pkgs_to_install.yml
+++ b/pop_os/pkgs_to_install.yml
@@ -38,7 +38,7 @@ pkgs_to_install_from_pip:
 pkgs_to_install_flatpak:
   - com.discordapp.Discord
   #- org.onlyoffice.desktopeditors
-  #- org.raspberrypi.rpi-imager
+  - org.raspberrypi.rpi-imager
   #- com.st.STM32CubeIDE
   #- com.microsoft.Teams
   #- us.zoom.Zoom
