--- a/pop_os/gnome_extensions.yml
+++ b/pop_os/gnome_extensions.yml
@@ -29,7 +29,7 @@
   - name: Unzipping gnome-shell-extension-installer
     check_mode: '{{ debug_mode }}'
     ansible.builtin.unarchive:
-      src: "{{ lookup('ansible.builtin.env', 'HOME') }}/.local/src/master.zip"
+      src: "{{ lookup('ansible.builtin.env', 'HOME') }}/.local/src/{{ repo_name }}-master.zip"
       dest: "{{ lookup('ansible.builtin.env', 'HOME') }}/.local/src/"
 
   # TODO: This is still broken right now
