--- a/ssh_config.yml
+++ b/ssh_config.yml
@@ -9,7 +9,7 @@
       - "github"
       - "gitlab"
       #- "physics-lab"
-      - "pop-pi"
+      - "razzpi"
   vars_files:
     - debug_mode.yml
   
