--- a/aliases.yml
+++ b/aliases.yml
@@ -21,7 +21,9 @@ aliases: {
           'update-vivi': "ansible-playbook {{ lookup('ansible.builtin.env', 'HOME') }}/Documents/linux_files/linux-setup/vivi.yml --extra-vars \"{\"debug_mode\":\"off\"}\"" ,
           #'wine32': "WINEPREFIX={{ lookup('ansible.builtin.env', 'HOME') }}/.wine32 wine"
           #'clear': "printf '\33c\e[3J'",    # Only necessary for Rocky Linux 8.6 (unsure about 9)
-          'ls': 'ls --color=auto'
+          'ls': 'ls --color=auto',
+          #'clang-omp': 'clang -Xclang -fopenmp -lomp',     # for macOS
+          #'clang-omp++': 'clang++ -Xclang -fopenmp -lomp', # for macOS
          }
          
 aliases_redhat_distros: {
