--- a/pop_os/gnome_extensions.yml
+++ b/pop_os/gnome_extensions.yml
@@ -51,7 +51,8 @@
       # 4709 -> Another Window Session Manager
       # 3733 -> Tiling Assistant
       # 1319 -> GSConnect
+      # 5267 -> Walkpaper2
       # NOTE: --restart-shell doesn't seem to do anything (still need to restart
       #       manually)
       # NOTE: Consider putting these into a vars_files file if more get added
-      cmd: "{{ lookup('ansible.builtin.env', 'HOME') }}/.local/bin/{{ repo_name }} 4709 3733 1319 --restart-shell"
+      cmd: "{{ lookup('ansible.builtin.env', 'HOME') }}/.local/bin/{{ repo_name }} 4709 3733 1319 5267 --restart-shell"
